Fix post title alignment

--- a/components/post-header-info/post-header-info.module.scss
+++ b/components/post-header-info/post-header-info.module.scss
@@ -7,8 +7,6 @@
   }
 
   .post-info {
-    width: 90%;
-    margin: 0 auto;
     flex-wrap: wrap;
     gap: 10px;
   }
